@@ -1,6 +1,6 @@
 Package: optimx
-Version: 2018-3.30
-Date: 2018-03-30
+Version: 2018-4.1
+Date: 2018-04-01
 Title: Expanded Replacement and Extension of the 'optim' Function
 Authors@R: c( person(given = c("John", "C"), family = "Nash", role =
     c("aut", "cre"), email = "nashjc@uottawa.ca"), person(given =
